# OpenGL_Engine

./: .gitignore  CMakeLists.txt  README.md
assets/: image.psd
include/: Assert.hpp  BufferLayout.hpp  Globals.hpp  ImGui.hpp  IndexBuffer.hpp  Logging.hpp  Opengl.hpp  Renderer.hpp  Shader.hpp  Test.hpp  Texture.hpp  Utility.hpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp
shaders/: CollisionsFrag.glsl  CollisionsVert.glsl  shader.frag  shader.frag.old  shader.vert  shader.vert.old
src/: Main.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Utility.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  main_backup.txt
test/: TestClearColor.cpp  TestClearColor.hpp  TestCollisions.cpp  TestCollisions.hpp  TestPerspective.hpp  TestTexture.cpp  TestTexture.hpp
